# awesome-ai-ml-code

./: README.md  main.py  pyproject.toml
decision_tree/: README.md  decision_tree.py  main.py
mini-neural-network/: README.md  neural_network.py  test_nn.py
mini_lm/: README.md  bigram_lm.py  corpus.txt  main.py
