[project]
name = "neural-network"
version = "0.1.0"
description = "A collection of AI and ML concept and paper implementations built from scratch for learning and experimentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "rich>=13.9.4",
    "ruff>=0.14.10",
]
